[package]
name = "ms_buildtools"
version = "0.1.0"
edition = "2021"
publish = ["crates-io"]

[dependencies]
anyhow = "1.0.86"
fs_extra = "1.3.0"
glob = "0.3.1"
rayon = "1.10.0"
reqwest = { version = "0.12.7", features = ["blocking"] }
snippet = { git = "https://github.com/ikey4u/snippet.git" }
walkdir = "2.5.0"
